# gafferchallenge

./: .gitignore  Cargo.toml  presentation.org
cmd/backend/: Cargo.toml
cmd/backend/src/: main.rs
cmd/client/: Cargo.toml
cmd/client/src/: main.rs
cmd/combined/: Cargo.toml
cmd/combined/src/: main.rs
cmd/server/: Cargo.toml
cmd/server/src/: main.rs
cmd/video/: Cargo.toml
cmd/video/src/: main.rs
cmd/video_server/: Cargo.toml
cmd/video_server/src/: main.rs
pkg/backend/: Cargo.toml  backend.rs
pkg/forwarder/: Cargo.toml  forwarder.rs
pkg/hasher/: Cargo.toml  hasher.rs
pkg/sender/: Cargo.toml  sender.rs
pkg/shutdown/: Cargo.toml  sender.rs  shutdown.rs
terraform/: infra.tf
terraform/scripts/: start-backend.sh  start-client.sh  start-server.sh
