[workspace]
resolver = "2"

members = [
  "pkg/*",
  "cmd/*"
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
tracing = "0.1.40"
anyhow = "1.0.82"
tracing-subscriber = "0.3.18"
tokio-util = "0.7.10"
socket2 = "0.5.6"
monoio = "0.2.3"
crossbeam = "0.8.4"

sender = { path = "./pkg/sender" }
forwarder = { path = "./pkg/forwarder" }
hasher = { path = "./pkg/hasher" }
shutdown = { path = "./pkg/shutdown" }
listener = { path = "./pkg/server" }