[package]
name = "sender"
version = "0.1.0"
edition = "2021"

[lib]
path = "sender.rs"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio-util.workspace = true
socket2.workspace = true
monoio.workspace = true
crossbeam.workspace = true
shutdown.workspace = true